# LLVM-Course

./: .gitignore  README.md
LLVM_Asm2IR/: README.MD  app.s  app_asm_IRgen_1.cpp  app_asm_IRgen_2.cpp  app_asm_IRgen_cpu.cpp
LLVM_IRGen/: README.md  app_ir_gen.cpp  app_ir_gen.ll
LLVM_Language/: Grammar.gr  MyLang.lang  MyLang.lex  MyLang.sh  MyLang.y  README.md
LLVM_Pass/: IR_traces  Pass_cfg.cpp  ProcessTrace.py  README.md  log.c
SDL/: CMakeLists.txt  README.md  app.c  app.ll  makeIR.sh  updatePixels.h
SDL/lib/: sim.c  sim.h
